package ch.hslu.cas.msed.blobfish.minimax.base;

public record MoveNode(int eval, MoveHistoryNode history) { }
